# efp

./: .clang-format  CMakeLists.txt  CODEOWNERs  LICENSE  LICENSE.md  README.md  library.properties  main.cpp
example/: CMakeLists.txt  demo.cpp  format_demo.cpp  io_demo.cpp  loop_efp.cpp  trait_demo.cpp
include/: arduino_debug.hpp  c_utility.hpp  cpp_core.hpp  crtp_prelude.hpp  crtp_seq.hpp  crtp_sequence.hpp  cyclic.hpp  efp.hpp  enum_type.hpp  format.hpp  io.hpp  limits.hpp  maybe.hpp  meta.hpp  numeric.hpp  parser.hpp  poxis.hpp  prelude.hpp  prelude_.hpp  scientific.hpp  sequence.hpp  sequence_.hpp  sfinae.hpp  signal.hpp  sm.hpp  sm2.hpp  sort.hpp  string.hpp  trait.hpp  tuple.hpp  tuple_.hpp  vcq.hpp  zero_copy.hpp
include/efp/: allocator.hpp  c_utility.hpp  concurrency.hpp  cpp_core.hpp  cyclic.hpp  enum.hpp  enum_.hpp  enum_type.hpp  format.hpp  io.hpp  limits.hpp  maybe.hpp  meta.hpp  numeric.hpp  prelude.hpp  scientific.hpp  sequence.hpp  sort.hpp  string.hpp  trait.hpp
include/efp/fmt/: core.h  format-inl.h  format.h
include/efp/fmt_original/: core.h  format-inl.h  format.h
include/extra/: arduino_debug.hpp
include/fmt/: core.h  format.h
src/: arduino_debug.hpp  math.hpp  numeric.hpp  prelude.hpp  pure.hpp  signal.hpp  zero_copy.hpp
test/: CMakeLists.txt  c_utility_test.hpp  crtp_prelude_test.hpp  crtp_seq_test.hpp  crtp_sequence_test.hpp  cyclic_test.hpp  demo.cpp  enum_type_test.hpp  format_demo.cpp  format_test.hpp  io_demo.cpp  loop_c.cpp  loop_efp.cpp  maybe_test.hpp  meta_test.hpp  numeric_test.hpp  parser_test.hpp  prelude__test.hpp  prelude_test.cpp  prelude_test.hpp  scientific_test.hpp  sequence__test.hpp  sequence_test.hpp  sfinae_test.hpp  signal_test.hpp  sm_test.hpp  sort_test.hpp  string_test.hpp  test.cpp  test_common.hpp  trait_demo.cpp  tuple_test.hpp  vcq_test.hpp  zero_copy_test.hpp
test/efp/: CMakeLists.txt  c_utility_test.hpp  concurrency_test.hpp  cyclic_test copy.hpp  cyclic_test.hpp  enum_test.hpp  format_test.hpp  maybe_test.hpp  meta_test.hpp  numeric_test.hpp  prelude_test.hpp  scientific_test.hpp  sequence_test.hpp  sort_test.hpp  string_test.hpp  test.cpp  test_common.hpp
test/extra/: sm_test.hpp
